:memo: Better API docs
